# rye-ruff-starter

./: pyproject.toml
src/: hello.py  main.py
test/: test_hello.py
