[project]
name = "text-classification-explainability"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "YadaYuki", email = "yada.yuki@fuji.waseda.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff~=0.0.270", "black~=23.3.0", "mypy~=1.3.0", "pytest~=7.3.1"]
[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119

[tool.mypy]
python_version = 3.11
disallow_untyped_defs=true